# game_of_life_c-

./: CMakeLists.txt
include/: Field.h  Game_Of_Life.h  Variable.h
src/: Field.cpp  Game_Of_Life.cpp  main.cpp
test/: life_tests — копия.cpp  life_tests.cpp
